<resources>
    <string name="app_name">Project Management App</string>
    <string name="home">Home</string>
    <string name="folders">Folders</string>
    <string name="todo">Todo</string>
    <string name="untitled">Untitled</string>
    <string name="created_on">Created on :</string>
    <string name="starred">Starred</string>
    <string name="notifications">Notifications</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome">Make each day your masterpiece!</string>
    <string name="projects">Projects</string>
    <string name="more">More</string>
    <string name="today_tasks">Today Tasks</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_todo">Add Todo</string>
    <string name="project_name">PROJECT NAME</string>
    <string name="dummy_project">Dummy Project</string>
    <string name="project_due">Task Due</string>
    <string name="dash">-</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="create_project">Create Project</string>
    <string name="task_name">Task Name</string>
    <string name="a_simple_task">A simple task</string>
    <string name="due_date">Due Date</string>
    <string name="save">Save</string>
    <string name="attach_image">Attach Image</string>
    <string name="search">Search</string>
    <string name="create_todo">Create Todo</string>
    <string name="due_on">Due On</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_cancel">Do you want to cancel?</string>
    <string name="ok">OK</string>
    <string name="empty_notification">No New Notifications</string>
    <string name="empty_project_error">Project Name should not be Null</string>
    <string name="empty_duedate_error">Due Date should not be Null</string>
</resources>