<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/folders"
        android:title="@string/folders"
        android:icon="@drawable/ic_folder"
        app:showAsAction="always"/>

    <item android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/starred"
        android:title="@string/starred"
        android:icon="@drawable/ic_star"
        app:showAsAction="always"/>

    <item
        android:id="@+id/notification"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notification"
        app:showAsAction="withText"/>

</menu>