<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradiant">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/projectNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:fontFamily="@font/rubik"
            android:text="@string/project_name"
            android:textColor="@color/white_56"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/projectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:hint="@string/dummy_project"
            android:paddingVertical="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projectNameLabel" />

        <TextView
            android:id="@+id/projectDueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:fontFamily="@font/rubik"
            android:text="@string/project_due"
            android:textColor="@color/white_56"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projectName" />

        <LinearLayout
            android:id="@+id/dueDateContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginVertical="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projectDueLabel">

            <EditText
                android:id="@+id/startDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="16sp"
                android:minWidth="100sp"
                android:text="@string/start_date"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/dash"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/EndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="16sp"
                android:minWidth="100sp"
                android:text="@string/end_date"
                android:textColor="@color/white" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabAddTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="26dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/add_todo"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:icon="@drawable/ic_add"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dueDateContainer" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todoRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fabAddTodo"
            tools:listitem="@layout/item_todo"
            tools:itemCount="2" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabCreateFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:minWidth="300dp"
            android:layout_marginTop="26dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/create_project"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:padding="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/todoRecyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>