<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradiant"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title"
                android:textColor="@color/white"
                android:textColorHint="@color/colorPrimary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:minHeight="160dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/description"
                android:textColor="@color/white"
                android:textColorHint="@color/colorPrimary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="16dp"
            android:backgroundTint="@color/purple"
            app:icon="@drawable/ic_time_circle"
            android:text="@string/due_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="26dp">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/fire"
                android:textAllCaps="false"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/addTodoButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:paddingHorizontal="16dp"
                android:layout_weight="0.5"
                android:layout_marginHorizontal="16dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/green"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</LinearLayout>