<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/curved_transparent_bbackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_cancel"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="40dp"
            android:textColor="#060719"
            android:fontFamily="@font/rubik_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="26dp">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"
                android:backgroundTint="#060719" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:padding="8dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_thinking" />

</FrameLayout>