<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradiant">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/taskTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:fontFamily="@font/rubik"
            android:text="@string/task_name"
            android:textColor="@color/white_56"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/taskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:hint="@string/a_simple_task"
            android:paddingVertical="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskTitleLabel" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:fontFamily="@font/rubik"
            android:text="@string/task_name"
            android:textColor="@color/white_56"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:minHeight="160dp"
            android:background="@drawable/white_rounded_background"
            android:paddingVertical="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLabel" />

        <TextView
            android:id="@+id/taskDueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:fontFamily="@font/rubik"
            android:text="@string/project_due"
            android:textColor="@color/white_56"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <Button
            android:id="@+id/DueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@android:color/transparent"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="16sp"
            android:minWidth="100sp"
            android:text="@string/due_date"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDueLabel" />

        <Button
            android:id="@+id/attachFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@android:color/transparent"
            android:drawableStart="@drawable/ic_attachment"
            android:drawablePadding="16sp"
            android:minWidth="100sp"
            android:text="@string/attach_image"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DueDate" />

        <LinearLayout
            android:id="@+id/dueDateContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginVertical="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attachFile">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fabCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="26dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dueDateContainer" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fabSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="26dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dueDateContainer" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>