<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradiant"
    tools:context=".view.fragments.DashboardFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:text="@string/dashboard"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white_87"
        android:text="@string/welcome"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard" />

    <LinearLayout
        android:id="@+id/projectContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/projects"
               android:textColor="@color/white"
               android:layout_margin="16dp"
               android:textSize="24sp"
               android:textStyle="bold" />

           <TextView
               android:id="@+id/projectMore"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/more"
               android:clickable="true"
               android:focusable="true"
               android:textColor="@color/white_12"
               android:layout_margin="16dp"
               android:textStyle="bold" />

       </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/projectRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            tools:itemCount="2"
            tools:listitem="@layout/item_folders"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/today_tasks"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/taskMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/white_12"
                android:layout_margin="16dp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taskRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:itemCount="2"
            tools:listitem="@layout/item_tasks"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>